# catdex-webapp

./: Cargo.toml  README.md  diesel.toml
src/: main.rs  models.rs
static/: add.html  index.html
