[package]
name = "catdex"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
diesel = { version = "2.2.6", features = ["postgres", "r2d2"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
handlebars = { version = "4.3", features = ["dir_source"] }
actix-files = "0.6.2"
env_logger = "0.10.0"
awmp = "0.8.1"
http = "0.2"

